yew-function-components-macro/tests/functional_macro/applied-to-non-fn-fail.stderr
error: `function_component` attribute can only be applied to functions
 --> $DIR/applied-to-non-fn-fail.rs:9:1
  |
9 | #[function_component(Comp)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
